--- a/404.html
+++ b/404.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    
-    <title>LGR</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>404 - Page Not Found</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #f5f5f5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 6rem;
+      margin: 0;
+      color: #e74c3c;
+    }
+
+    p {
+      font-size: 1.5rem;
+      margin: 0.5rem 0;
+    }
+
+    a {
+      margin-top: 1.5rem;
+      text-decoration: none;
+      color: #3498db;
+      font-weight: bold;
+      border: 2px solid #3498db;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+    }
+
+    a:hover {
+      background: #3498db;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <h1>404</h1>
-    <p>Page Not Found</p>
+  <h1>404</h1>
+  <p>Oops! The page you're looking for doesn't exist.</p>
+  <a href="/">Go back home</a>
 </body>
 </html>
